--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,7 @@
     </properties>
 
     <build>
+        <finalName>shoesapi</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
