--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/shoesdb?createDatabaseIfNotExist=true
+#spring.datasource.url=jdbc:mysql://localhost:3306/shoesdb?createDatabaseIfNotExist=true
+#spring.datasource.url=jdbc:mysql://103.221.222.158:3306/shoesdb?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=Abcd123$
 spring.jpa.hibernate.ddl-auto=update
